<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Portfolio</string>
	<string name="app_url">https://tumur.me</string>
	<string name="app_text">Tumur.B (Alex) | Android Developer</string>
	<string name="app_share_message">Please, share my portfolio with the world !!</string>
	<string name="name">Tumur.B(Alex)</string>
	<string name="title">Android Developer</string>
	<string name="menu_profile">Profile</string>
	<string name="menu_portfolio">Portfolio</string>
    <string name="menu_favorite">Favorite</string>
	<string name="menu_experience">Experience</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_search">Search</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_share">Share</string>
	<string name="menu_rate">Rate</string>
	<string name="menu_privacy">Privacy</string>
	<string name="menu_save">Save</string>
	<string name="menu_remove">Remove</string>
    <string name="menu_delete_all">Delete all</string>
	<string name="dialog_app_info">App Info</string>
	<string name="button_skip">Skip</string>
	<string name="button_get_started">Get started</string>
	<string name="person_name">Tumur.B(Alex)</string>
	<string name="person_title">Android Developer</string>
	<string name="button_refresh">Refresh</string>
	<string name="button_dismiss">Close</string>
	<string name="no_internet_title">No Internet</string>
	<string name="no_internet_text">Please check your connection \n and try again.</string>
	<string name="error_shared_preference">This type cannot be saved into Preferences</string>
	<string name="cd_logo">App\'s logo</string>
	<string name="cd_background">Background image</string>
	<string name="cd_avatar">Profile picture</string>
	<string name="cd_loader">Loading icon</string>
	<string name="cd_offline">No signal</string>
	<string name="cd_calendar">Calendar</string>
    <string name="cd_play">Play a video</string>
    <string name="cd_delete">Delete item</string>
	<string name="cd_job_title">Job title</string>
	<string name="cd_company">Company\'s name</string>
	<string name="cd_location">Company\'s location</string>
    <string name="cd_task">Task</string>
    <string name="cd_external_link">External link</string>
	<string name="copy_right">You can get in touch with me \n ✉️ tumur.alex@gmail.com</string>
	<string name="preference_key_data">data</string>
    <string name="preference_key_theme">theme</string>
    <string name="preference_key_theme_option">theme_option</string>
	<string name="preference_key_bg_sync">auto_background_sync_mode</string>
	<string name="preference_key_app">app</string>
	<string name="preference_key_app_version">app_version</string>
	<string name="preference_key_software_license">software_license</string>
	<string name="preference_key_source_code">source_code</string>
	<string name="preference_key_privacy">privacy</string>
	<string name="preference_key_rate">rate</string>
	<string name="preference_key_made">made</string>
	<string name="preference_key_tumur">tumur</string>
	<string name="summary_tumur">You can find me on Twitter</string>
	<string name="preference_key_footer">footer</string>
	<string name="preference_key_email">email</string>
	<string name="category_data_options">Data Options</string>
    <string name="category_theme_options">Display Options</string>
    <string name="title_periodic_data_sync">Check updates periodically</string>
    <string name="title_choose_theme">Choose theme</string>
    <string name="summary_periodic_data_sync">Check every 12 hours for content update</string>
    <string name="summary_choose_theme">Default</string>
	<string name="category_app_info">App Info</string>
	<string name="title_app_version">App Version</string>
	<string name="summary_app_version">1.0.0-beta01</string>
	<string name="summary_external_link">External link</string>
	<string name="title_privacy">Protecting Your Privacy</string>
	<string name="title_rate">Rate This App</string>
	<string name="category_made">Portfolio App is Made By</string>
	<string name="title_tumur">tumur_alex</string>
	<string name="title_email">You can get in touch with me</string>
	<string name="summary_email">✉️ tumur.alex@gmail.com</string>
	<string name="title_software_license">Software license</string>
	<string name="summary_software_license">Acknowledgement </string>
	<string name="title_source_code">Source code</string>
	<string name="summary_source_code">Licensed under the Apache License</string>
	<string name="category_footer">Thanks for visiting my Portfolio</string>
	<string name="toast_success">Your data is up to date</string>
	<string name="toast_failed">Please check your internet connection</string>
    <string name="toast_saved">Saved</string>
    <string name="toast_unsaved">Removed</string>
    <string name="technology">Technology</string>
    <string name="screenshot">Screenshots</string>
    <string name="description">Description</string>
    <string name="preview">Preview</string>
    <string name="empty">Empty</string>
    <string name="more_info">More information</string>
	<string name="task">Responsibilities</string>
    <string name="map">Map</string>
    <string name="info">Info</string>
    <string name="resource">Links</string>
    <string name="transition_portfolio_item_image">portfolio_image</string>
    <string name="transition_portfolio_item_logo">portfolio_logo</string>
</resources>