<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:key="@string/preference_key_theme"
            app:title="@string/category_theme_options"
            app:layout="@layout/preference_category_title">

        <ListPreference
                app:key="@string/preference_key_theme_option"
                app:title="@string/title_choose_theme"
                app:icon="@drawable/ic_theme"
                app:summary="%s"
                app:layout="@layout/preference_item_icon_title_summary"
                android:entries="@array/pref_theme_labels"
                android:entryValues="@array/pref_theme_values"
                android:defaultValue="default"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:key="@string/preference_key_data"
            app:title="@string/category_data_options"
            app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
                app:key="@string/preference_key_bg_sync"
                app:title="@string/title_periodic_data_sync"
                app:icon="@drawable/ic_sync"
                app:summary="@string/summary_periodic_data_sync"
                app:defaultValue="true"
                app:layout="@layout/preference_item_switch"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:key="@string/preference_key_app"
            app:title="@string/category_app_info"
            app:layout="@layout/preference_category_title">

        <Preference
                app:key="@string/preference_key_app_version"
                app:icon="@drawable/ic_app_version"
                app:summary="@string/summary_app_version"
                app:title="@string/title_app_version"
                app:layout="@layout/preference_item_icon_title_summary">
        </Preference>

        <Preference
                app:key="@string/preference_key_source_code"
                app:icon="@drawable/ic_github"
                app:summary="@string/summary_source_code"
                app:title="@string/title_source_code"
                app:layout="@layout/preference_item_icon_title_summary">
        </Preference>

        <Preference
                app:key="@string/preference_key_privacy"
                app:icon="@drawable/ic_privacy"
                app:title="@string/title_privacy"
                app:summary="@string/summary_external_link"
                app:layout="@layout/preference_item_icon_title_summary">
        </Preference>

        <Preference
                app:key="@string/preference_key_rate"
                app:icon="@drawable/ic_rate"
                app:summary="@string/summary_external_link"
                app:title="@string/title_rate"
                app:layout="@layout/preference_item_icon_title_summary_last">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://google.com"/>

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
            app:key="@string/preference_key_made"
            app:title="@string/category_made"
            app:layout="@layout/preference_category_title">

        <Preference
                app:key="@string/preference_key_tumur"
                app:icon="@drawable/profile"
                app:title="@string/title_tumur"
                app:summary="@string/summary_tumur"
                app:layout="@layout/preference_twitter">
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
            app:key="@string/preference_key_footer"
            app:title="@string/category_footer"
            app:layout="@layout/preference_category_footer">

        <Preference
                app:key="@string/preference_key_email"
                app:title="@string/title_email"
                app:summary="@string/summary_email"
                app:layout="@layout/preference_item_email">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="mailto:tumur.alex@gmail.com?subject=Oh Hello there,">
            </intent>
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
