<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_menu" android:checkableBehavior="single">
        <item
                android:id="@+id/profile_screen"
                android:icon="@drawable/ic_menu_profile_animation"
                android:title="@string/menu_profile"/>
        <item
                android:id="@+id/portfolio_screen"
                android:icon="@drawable/ic_menu_portfolio_animation"
                android:title="@string/menu_portfolio"/>
        <item
                android:id="@+id/experience_screen"
                android:icon="@drawable/ic_menu_experience_animation"
                android:title="@string/menu_experience"/>
        <item
                android:id="@+id/settings_screen"
                android:icon="@drawable/ic_menu_settings_animation"
                android:title="@string/menu_settings"/>
        <item
                android:id="@+id/favorite_screen"
                android:icon="@drawable/ic_menu_favorite_animation"
                android:title="@string/menu_favorite"/>
    </group>
</menu>
