<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_save"
            android:icon="@drawable/ic_menu_save"
            app:iconTint="?attr/colorOnPrimary"
            app:showAsAction="ifRoom"
            android:title="@string/menu_save"/>

    <item
            android:id="@+id/menu_saved"
            android:icon="@drawable/ic_menu_saved"
            android:visible="false"
            app:iconTint="?attr/colorOnPrimary"
            app:showAsAction="ifRoom"
            android:title="@string/menu_remove"/>

    <item
            android:id="@+id/action_profile_menu"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_menu_dots"
            app:iconTint="?attr/colorOnPrimary"
            android:orderInCategory="100"
            android:title="">
        <menu>
            <item
                    android:id="@+id/menu_share"
                    android:icon="@drawable/ic_menu_share"
                    app:iconTint="@color/colorBottomSheetPrimaryText"
                    app:showAsAction="collapseActionView"
                    android:title="@string/menu_share"/>

            <item
                    android:id="@+id/menu_rate"
                    android:icon="@drawable/ic_menu_rate"
                    app:iconTint="@color/colorBottomSheetPrimaryText"
                    app:showAsAction="collapseActionView"
                    android:title="@string/menu_rate"/>
        </menu>
    </item>

</menu>