<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".screens.MainActivity">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:background="?attr/colorPrimaryVariant">

        <!-- Background-->
        <ImageView
                android:id="@+id/header_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/cd_background"
                android:alpha="0.1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_header_bg"/>

        <!-- Avatar -->
        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/header_avatar"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:contentDescription="@string/cd_avatar"
                android:src="@drawable/profile"
                android:scaleType="centerCrop"
                app:civ_border_color="@color/colorBorder"
                app:civ_border_width="@dimen/_1sdp"
                app:layout_constraintBottom_toTopOf="@+id/header_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"/>

        <!-- Name -->
        <TextView
                android:id="@+id/header_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2sdp"
                android:paddingTop="@dimen/_4sdp"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textSize="@dimen/dimen_16sp"
                android:letterSpacing="0.05"
                android:textAlignment="center"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/name"
                app:layout_constraintBottom_toTopOf="@+id/header_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_avatar"/>

        <!-- Title -->
        <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textSize="@dimen/dimen_14sp"
                android:textAlignment="center"
                android:letterSpacing="0.05"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_name"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
