<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable name="model" type="me.tumur.portfolio.screens.settings.dialog.AppDialogViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <!-- Dialog Header -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dialog_header"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="@dimen/_100sdp"
                android:background="?attr/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/dialog_body"
                android:alpha="0.9">

            <!-- App logo -->
            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/dialog_header_logo"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:contentDescription="@string/cd_logo"
                    app:srcCompat="@drawable/ic_logo"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/dialog_header_title"/>

            <!-- Title -->
            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dialog_header_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadline1"
                    app:layout_constraintTop_toBottomOf="@+id/dialog_header_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="?attr/colorOnPrimary"
                    android:text="@string/app_name"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Dialog Body -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dialog_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/dialog_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/dialog_footer">

            <!-- List items -->
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dialog_body_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:orientation="vertical"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:listitem="@tools:sample/cities"
                    tools:itemCount="10"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Dialog Footer -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dialog_footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/dialog_body"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:id="@+id/dialog_footer_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_40sdp"
                    android:paddingEnd="@dimen/_40sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:background="@color/colorHeaderBackground"
                    android:onClick="@{() -> model.setCloseButtonOnClick(true)}"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textStyle="bold"
                    android:letterSpacing="0.1"
                    android:textAlignment="center"
                    android:textSize="@dimen/dimen_16sp"
                    android:textAllCaps="true"
                    app:cornerRadius="@dimen/_15sdp"
                    android:strokeWidth="@dimen/_1sdp"
                    android:strokeColor="@color/button_outline_icon_text_border_color"
                    app:rippleColor="?attr/colorOnSurface"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/button_outline_icon_text_border_color"
                    android:text="@string/button_dismiss"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
